# advent_of_code_2025

./: .gitignore  pyproject.toml
01-12/: problem.md  solution.ipynb
02-12/: solution.ipynb
03-12/: problem.md
04-12/: solution.ipynb
