[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "advent-of-code-2025"
version = "0.1.0"
description = "Solutions and utilities for Advent of Code 2025 puzzles."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "you@example.com" }
]
requires-python = ">=3.10"

dependencies = [
    "rich>=13.0",
    "advent-of-code-data[nb]",  # notebook extras
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "ruff",
    "isort",
]

[project.scripts]
aoc = "aoc.main:main"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C", "B"]